--- a/.github/workflows/Pruebas.yml
+++ b/.github/workflows/Pruebas.yml
@@ -2,9 +2,11 @@ on:
   push:
     branches:
       - main
+      - RamaPrueba
   pull_request:
     branches:
       - main
+      - RamaPrueba
 
 jobs:
   build:
@@ -23,11 +25,3 @@ jobs:
         run: mvn -B package --file pom.xml
       - name: Test with Maven
         run: mvn verify
-      - name: Set up application properties
-        run: |
-          echo "spring.datasource.url=jdbc:mysql://localhost:3306/resultados" >> src/main/resources/application.properties
-          echo "spring.datasource.username=root" >> src/main/resources/application.properties
-          echo "spring.datasource.password=123" >> src/main/resources/application.properties
-          echo "spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver" >> src/main/resources/application.properties
-          echo "spring.jpa.hibernate.ddl-auto=update" >> src/main/resources/application.properties
-          echo "spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect" >> src/main/resources/application.properties
