creamos test para documentoservice2

--- a/.github/workflows/Pruebas.yml
+++ b/.github/workflows/Pruebas.yml
@@ -1,12 +1,13 @@
+
+name: Java CI with Maven
+
 on:
   push:
     branches:
       - main
-      - RamaPrueba
   pull_request:
     branches:
       - main
-      - RamaPrueba
 
 jobs:
   build:
