creamos test para documentoservice2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
-spring.datasource.url=jdbc:mysql://localhost:3306/resultados
+spring.datasource.url=viaduct.proxy.rlwy.net
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=123
+spring.datasource.password=3CF1fhfDC2f25caHH1adcFeBbh12ahGG
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 
