creamos test para documentoservice2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
-spring.datasource.url=viaduct.proxy.rlwy.net
+spring.datasource.url=mysql://root:3CF1fhfDC2f25caHH1adcFeBbh12ahGG@viaduct.proxy.rlwy.net:50120/railway
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=3CF1fhfDC2f25caHH1adcFeBbh12ahGG
