--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 
-spring.datasource.url=mysql://root:3CF1fhfDC2f25caHH1adcFeBbh12ahGG@viaduct.proxy.rlwy.net:50120/railway
+spring.datasource.url=jdbc:mysql://localhost:3306/resultados
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=3CF1fhfDC2f25caHH1adcFeBbh12ahGG
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.datasource.password=123
+spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 
 
 spring.jpa.hibernate.ddl-auto=update
