--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/resultados
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=123
-spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 
 spring.jpa.hibernate.ddl-auto=update
