--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/resultados
+spring.datasource.url=roundhouse.proxy.rlwy.net
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=123
+spring.datasource.password=BFb2G2c61eeBGdh4daEA5fhc3dAAHFf-
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 
