--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=mysql://root:BFb2G2c61eeBGdh4daEA5fhc3dAAHFf-@roundhouse.proxy.rlwy.net:43400/railway
+spring.datasource.url=mysql://root:BFb2G2c61eeBGdh4daEA5fhc3dAAHFf-@mysql.railway.internal:3306/railway
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=BFb2G2c61eeBGdh4daEA5fhc3dAAHFf-
