--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 spring.datasource.url=roundhouse.proxy.rlwy.net:43400/railway
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
