--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.mvc.pathmatch.matching-strategy=ant-path-matcher
-spring.datasource.url=roundhouse.proxy.rlwy.net:43400/railway
+
+spring.datasource.url=jdbc:mysql://localhost:3306/resultados
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=BFb2G2c61eeBGdh4daEA5fhc3dAAHFf-
+spring.datasource.password=123
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 
