--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,11 @@
 			<artifactId>spring-rabbit</artifactId>
 			<version>3.1.1</version>
 		</dependency>
-
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
 
 
 	</dependencies>
