--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,13 @@
 			<version>3.1.1</version>
 		</dependency>
 
+
+		<dependency>
+			<groupId>org.eclipse.angus</groupId>
+			<artifactId>jakarta.mail</artifactId>
+			<version>2.0.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
