creamos test para documentoservice2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,8 @@ server.port=8080
 email.sender=labelardo477@gmail.com
 email.password=rnrevvyebogtcnak
 
+resultados.rabbit.queue.crearAspirante=correo
+
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
