--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+springdoc.swagger-ui.path=/swagger-ui.html
 spring.datasource.url=jdbc:mysql://localhost:3306/resultados
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
