--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 springdoc.swagger-ui.path=/swagger-ui.html
-spring.datasource.url=jdbc:mysql://localhost:3306/resultados
+spring.datasource.url=jdbc:mysql://viaduct.proxy.rlwy.net:12059/railway
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=123
+spring.datasource.password=HA-Hg-25AbgeAgFBFcD5C4FCBg2aH6b-
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 
