--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 springdoc.swagger-ui.path=/swagger-ui.html
-spring.datasource.url=mysql://root:HA-Hg-25AbgeAgFBFcD5C4FCBg2aH6b-@mysql.railway.internal:3306/railway
+spring.datasource.url=jdbc:mysql://viaduct.proxy.rlwy.net
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=HA-Hg-25AbgeAgFBFcD5C4FCBg2aH6b-
