--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,9 @@ email.sender=labelardo477@gmail.com
 email.password=rnrevvyebogtcnak
 
 resultados.rabbit.queue.crearAspirante=correo
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
 
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
