--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,10 +13,13 @@ server.port=8080
 email.sender=labelardo477@gmail.com
 email.password=rnrevvyebogtcnak
 
-resultados.rabbit.queue.crearAspirante=correo
+
+spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+resultados.rabbit.queue.crearAspirante=correo
 
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
