creamos test para documentoservice2

--- a/pom.xml
+++ b/pom.xml
@@ -60,8 +60,8 @@
 
 		<dependency>
 			<groupId>org.springframework.amqp</groupId>
-			<artifactId>spring-rabbit</artifactId>
-			<version>3.1.1</version>
+			<artifactId>spring-rabbit-test</artifactId>
+			<scope>test</scope>
 		</dependency>
 
 
